fixed the firstsection buttons to work better when stretching/pushing together

--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ nav a {
   list-style: none;
   display: flex;
   justify-content: space-between;
-  align-items: ;
 }
 .buttons a {
   text-decoration: none;
@@ -103,14 +102,14 @@ nav a {
 }
 
 .firstsection div {
-  width: 40%;
+  width: 700px;
   padding: 50px 20% 50px 20%;
 }
 
 .firstsection div ul {
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
